firmware/lib/control-table/tests/ui/padding_violation.stderr
error[E0080]: evaluation panicked: Block struct has repr(C) padding; add explicit `_rsvd` fields so the flat read path never exposes uninitialized bytes
 --> tests/ui/padding_violation.rs:4:10
  |
4 | #[derive(Block)]
  |          ^^^^^ evaluation of `_` failed here
